--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@faker-js/faker": "^7.3.0",
     "@hookform/resolvers": "^2.9.6",
     "apexcharts": "^3.35.3",
     "framer-motion": "^6.5.1",
@@ -29,6 +30,7 @@
     "@types/react": "^18.0.15",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "miragejs": "^0.1.45",
     "typescript": "^4.7.4"
   }
 }
