--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@faker-js/faker": "^7.3.0",
     "@hookform/resolvers": "^2.9.6",
     "apexcharts": "^3.35.3",
+    "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "next": "12.2.2",
     "react": "18.2.0",
